[tool.poetry]
name = "skand_pubsub_provider"
version = "0.1.0"
description = "A pubsub provider for Skand"
authors = ["Tony Yang <tonyyang@skand.io>"]

[tool.poetry.dependencies]
python = "~3.8"
boto3 = "^1.12.49"
cloudevents = "^1.11.0"
dapr = "1.13.0"
dapr-ext-grpc = "1.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^6.2.4"
pyopenssl = "22.1.0"

[tool.black]
line-length = 92
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
