[project]
name = "skand_pubsub_provider"
version = "0.1.0"
description = "A pubsub provider for Skand"

authors = [{ name = "Tony Yang", email = "tonyyang@skand.io" }]
maintainers = [{ name = "Tony Yang", email = "tonyyang@skand.io" }]

requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "boto3>=1.12.49",
  "cloudevents>=1.11.0",
  "dapr-ext-grpc==1.12.0",
  "dapr==1.14.0",
]

[tool.uv]
dev-dependencies = [
  "pre-commit<=3.8.0",
  "pyopenssl==22.1.0",
  "pyright>=1.1.389",
  "pytest>=8.3.3",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
